# fdb-extract

./: .dockerignore  .env.example  .gitignore  BUILDER.md  Cargo.toml  Dockerfile  LICENSE  README.md  dump.js  package.json  test.js  watch.js
deploy/: DEPLOY.md  ONBOARDING.md  add-tenant.sh  fdb-ingest.service
src/: bench.rs  cdc.rs  certgen.rs  extract.rs  lib.rs  main.rs  merge.rs  ods.rs  pg.rs  schema.rs  sink.rs  sqz.rs  tlsauth.rs  wire.rs
tests/: cdc_integration.rs
