[package]
name = "fdb-extract"
version = "0.1.0"
edition = "2021"
description = "Fast Firebird table extractor — direct ODS page reading, no server needed"
license = "MIT"
repository = "https://github.com/arthurbolsoni/fdb-extract"

[[bin]]
name = "fdb-extract"
path = "src/main.rs"

[[bin]]
name = "fdb-ingest"
path = "src/bin/ingest.rs"

[[bin]]
name = "fdb-agent"
path = "src/bin/agent.rs"

[lib]
name = "fdb_extract"
path = "src/lib.rs"

[dependencies]
memmap2   = "0.9"
clap      = { version = "4.5", features = ["derive"] }
anyhow    = "1.0"
indicatif = "0.17"
postgres   = "0.19"
ctrlc      = "3"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Push integrador (fdb-agent / fdb-ingest): mTLS validado no Rust ──
rustls          = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile  = "2"
rustls-pki-types = "1"
rcgen           = { version = "0.13", default-features = false, features = ["pem", "ring", "x509-parser"] }
x509-parser     = "0.16"

[dev-dependencies]
rsfbclient = { version = "0.23", features = ["dynamic_loading"] }

[features]
test_base_fdb = []
integration = []

[profile.release]
opt-level    = 3
lto          = true
codegen-units = 1
panic        = "abort"
